--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=http://nms377.github.io/public/index.html" />
   <title>Angular Instafeed</title>
   <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
