--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=http://nms377.github.io/public/index.html" />
+	<meta http-equiv="refresh" content="0; url=https://nms377.github.io/angular-instafeed/public/index.html" />
+  
   <title>Angular Instafeed</title>
   <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
