--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0; url=http://nms377.github.io/angular-instafeed/public/index.html" />
+	<!-- <meta http-equiv="refresh" content="0; url=http://nms377.github.io/angular-instafeed/public/index.html" /> -->
   <!-- <meta http-equiv="refresh" content="0; url=http://repo.github.io/folder/index.html" /> -->
   <title>Angular Instafeed</title>
   <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
