Upadted dummy index in root directory.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Angular Instafeed</title>
   <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta http-equiv="refresh" content="0"; url="http://nms377.github.io/angular-instafeed/public/index.html" />
   <base href="/">
 </head>
 <body>
