Updated path to stylesheet.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
   <app></app>
 </body>
-<link rel="stylesheet" type="text/css" href="app.css">
+<link rel="stylesheet" type="text/css" href="../src/public/app.css">
 </html>
