--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html ng-app="app" lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="0; url=http://nms377.github.io/angular-instafeed/src/public/index.html" />
-	<title>Document</title>
+  <meta charset="UTF-8">
+  <title>Angular Instafeed</title>
+  <!-- <link rel="icon" type="image/x-icon" href="/img/favicon.ico"> -->
+  <meta http-equiv="refresh" content="0; url=http://nms377.github.io/angular-instafeed/src/public/index.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <base href="/">
 </head>
 <body>
-	
+  <app></app>
 </body>
+<link rel="stylesheet" type="text/css" href="../style/app.css">
 </html>
