--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <body>
   <app></app>
 </body>
-<link rel="stylesheet" type="text/css" href="../style/app.css">
+<!-- <link rel="stylesheet" type="text/css" href="../style/app.css"> -->
 </html>
