Updating link to stylesheet.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,5 +11,5 @@
 <body>
   <app></app>
 </body>
-<link rel="stylesheet" href="src/style/app.css">
+<link rel="stylesheet" href="../style/app.css">
 </html>
