Linked app.html.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -12,4 +12,5 @@
   <app></app>
 </body>
 <link rel="stylesheet" href="../style/app.css">
+<link rel="text/javascript" href="../app/app.html">
 </html>
